Remove logging sys props