@@ -14,7 +14,7 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <revision>002.002.014</revision>
+    <revision>002.002.016</revision>
     <java.version>1.8</java.version>
     <jaCoCoArgLine></jaCoCoArgLine>
     <bcel.version>6.3.1</bcel.version>
@@ -43,7 +43,7 @@
 
     <!-- Test related library versions -->
     <junit-jupiter.version>5.5.2</junit-jupiter.version>
-    <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
+    <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
     <maven-jxr-plugin.version>3.0.0</maven-jxr-plugin.version>
     <pact.version>4.0.0-beta.5</pact.version>
     <hamcrest.version>1.3</hamcrest.version>
@@ -440,10 +440,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
-
         <configuration>
+          <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
-
+          <argLine>-Xmx2048m -XX:MaxPermSize=2048m</argLine>
           <environmentVariables>
             <TEST_ENV_001>TEST_ENV_001_VAL</TEST_ENV_001>
             <test_env_002>test_env_002_val</test_env_002>
@@ -452,9 +452,8 @@
             <test_bool_env_003>true</test_bool_env_003>
             <test_bool_env_004>false</test_bool_env_004>
             <argLine>--illegal-access=permit</argLine>
-            <argLine>@{jaCoCoArgLine} -Xmx1024m</argLine>
+            <argLine>@{jaCoCoArgLine} -Xmx2048m</argLine>
           </environmentVariables>
-
         </configuration>
 
         <dependencies>
